lender/tests/fail/covariant_fallible_lend_invariant.stderr
error: lifetime may not live long enough
 --> tests/fail/covariant_fallible_lend_invariant.rs:8:1
  |
8 | covariant_fallible_lend!(InvariantLend = &'lend Cell<Option<&'lend String>>);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | lifetime `'short` defined here
  | lifetime `'long` defined here
  | associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
  |
  = help: consider adding the following bound: `'short: 'long`
  = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
  = note: the struct `Cell<T>` is invariant over the parameter `T`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
  = note: this error originates in the macro `covariant_fallible_lend` (in Nightly builds, run with -Z macro-backtrace for more info)
